Update RA interview functionality and add insert_interview.sql